@@ -8,7 +8,7 @@ _publican()
 	cur=`_get_cword`
         brands=`ls /usr/share/publican/Common_Content`
 
-	commands='add_revision build clean clean_ids clean_set create create_brand create_site help_config install_book install_brand lang_stats package print_banned print_known print_tree print_unused remove_book rename site_stats update_db update_po update_pot update_site'
+	commands='add_revision build clean clean_ids clean_set create create_brand create_site help_config install_book install_brand lang_stats package print_banned print_known print_tree print_unused print_unused_images remove_book rename site_stats update_db update_po update_pot update_site'
 
 	if [[ $COMP_CWORD -eq 1 ]] ; then
 		if [[ "$cur" == -* ]]; then
@@ -24,7 +24,7 @@ _publican()
 				return 0;
 				;;
 			@(--lang|--langs))
-				_filedir -d
+				COMPREPLY=( $( compgen -d -- "$cur" ) )
 				return 0;
 				;;
 			--formats)
@@ -50,7 +50,7 @@ _publican()
 					options='--date --email --firstname --lang --member --revnumber --surname '
 					;;
 				build)
-					options='--distributed_set --embedtoc --formats --langs --novalid --publish '
+					options='--distributed_set --embedtoc --formats --langs --novalid --publish --src_dir '
 					;;
 				clean)
 					options=''
@@ -77,7 +77,7 @@ _publican()
 					options='--lang --site_config '
 					;;
 				install_brand)
-					options='--path '
+					options='--path --web '
 					;;
 				lang_stats)
 					options='--lang '
@@ -95,6 +95,9 @@ _publican()
 					options=''
 					;;
 				print_unused)
+					options=''
+					;;
+				print_unused_images)
 					options=''
 					;;
 				remove_book)
@@ -119,7 +122,7 @@ _publican()
 					options='--site_config '
 					;;
 			esac
-			options="$options --common_config --common_content --config --help --nocolours --quiet "
+			options="$options --brand_dir --common_config --common_content --config --help --nocolours --quiet "
 			COMPREPLY=( $( compgen -W "$options" -- $cur ) )
 		else
 			if [[ "$command" == @(--help) ]]; then
