@@ -54,6 +54,7 @@
   - Catch invalid version when installing book. BZ #748657
   - Fix duplicate IDs in HTML outputs. BZ #788576
   - Fix some epub validation errors. BZ #701667
+  - Add brand_dir option and publican XSL name space. BZ #800252
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
